# conda-broker

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
conda_broker/: __init__.py  __main__.py  api.py  broker.py  client.py  conformance.py  exceptions.py  files.py  hookspec.py  ipc.py  logs.py  models.py  paths.py  plugin.py  plugin_commands.py  registry.py  state.py  supervisor.py
conda_broker/cli/: __init__.py  main.py
conda_broker/cli/services/: __init__.py  common.py  dev.py  disable.py  doctor.py  enable.py  endpoint.py  events.py  list.py  logs.py  restart.py  start.py  status.py  stop.py  wait.py
conda_broker/runtimes/: __init__.py  process.py
demos/: README.md  _settings.tape  check.py  health-check.tape  json-status.tape  logs-events.tape  provider-plugin.tape  quickstart.tape  record.py  restart-policy.tape
demos/fixtures/demo-provider/: pyproject.toml
demos/fixtures/demo-provider/conda_broker_demo_provider-0.1.0.dist-info/: METADATA  entry_points.txt
demos/fixtures/demo-provider/demo_provider/: __init__.py  broker.py  flaky.py  health_service.py  healthcheck.py  heartbeat.py
docs/: conf.py  index.md  quickstart.md
docs/_static/css/: custom.css
docs/explanation/: architecture.md  index.md  plugin-discovery.md  prior-art.md  process-management.md  security.md
docs/how-to/: health-checks.md  index.md  integrate-conda-plugins.md  logs-and-events.md  manage-services.md  paths.md  plugin-status-checks.md  service-endpoints.md  validate-provider-services.md
docs/reference/: broker-api.md  cli.md  client-api.md  dev-harness.md  events.md  filesystem.md  index.md  json-output.md  plugin-command-api.md  provider-api.md  settings.md
docs/tutorials/: first-service.md  index.md  package-cache-service.md  presto-style-service.md  provider-plugin.md
tests/: conftest.py  test_api.py  test_broker.py  test_cli.py  test_client.py  test_conformance.py  test_demos.py  test_integration.py  test_ipc.py  test_models_registry.py  test_paths_state_logs.py  test_plugin.py  test_plugin_commands.py  test_supervisor.py
tests/fixtures/integration-provider/conda_broker_integration_provider-0.0.0.dist-info/: METADATA  entry_points.txt
tests/fixtures/integration-provider/integration_provider/: __init__.py  broker.py  service.py
