[project]
authors = [{name = "Jannis Leidel", email = "jannis@leidel.info"}]
dependencies = [
  "platformdirs >=3.0",
  "pluggy >=1.5",
  "rich >=13.0",
]
description = "User-visible service supervision for long-running conda-adjacent processes"
license = "BSD-3-Clause"
name = "conda-broker"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
documentation = "https://jezdez.github.io/conda-broker"
repository = "https://github.com/jezdez/conda-broker"

[project.scripts]
cb = "conda_broker.__main__:main"

[project.entry-points.conda]
"conda-broker" = "conda_broker.plugin"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.12.2"]

[tool.ruff]
exclude = [".pixi"]
target-version = "py310"

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
select = [
  "E",
  "F",
  "FA",
  "I",
  "ISC",
  "RUF100",
  "T10",
  "TCH",
  "UP",
  "W",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"

[tool.ty.environment]
python-version = "3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=26.3"
platformdirs = ">=3.0"
pluggy = ">=1.5"
rich = ">=13.0"

[tool.pixi.pypi-dependencies]
conda-broker = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"
ty = ">=0.0.1a7"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.0"
conda-sphinx-theme = ">=0.2"
myst-parser = ">=3.0"
sphinx-design = ">=0.6"
sphinx-copybutton = ">=0.5"
sphinx-sitemap = ">=2.5"
sphinx-argparse = ">=0.4"
sphinxcontrib-mermaid = ">=2.0"

[tool.pixi.environments]
dev = {features = ["dev"], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
test-py310 = {features = ["test", "py310"], solve-group = "test-py310"}
test-py311 = {features = ["test", "py311"], solve-group = "test-py311"}
test-py312 = {features = ["test", "py312"], solve-group = "test-py312"}
test-py313 = {features = ["test", "py313"], solve-group = "test-py313"}
test-py314 = {features = ["test", "py314"], solve-group = "test-py314"}
docs = {features = ["docs"], solve-group = "default"}

[tool.pixi.tasks]
lint = { cmd = "ruff check conda_broker tests", description = "Check code style" }
format = { cmd = "ruff format conda_broker tests", description = "Auto-format code" }
format-check = { cmd = "ruff format --check conda_broker tests", description = "Verify formatting" }
typecheck = { cmd = "ty check conda_broker", description = "Run type checker" }
test = { cmd = "pytest", description = "Run tests" }
test-cov = { cmd = "pytest --cov=conda_broker --cov-report=term-missing", description = "Run tests with coverage" }

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -b dirhtml docs docs/_build/dirhtml", description = "Build documentation" }

[tool.pixi.tasks.check]
depends-on = ["lint", "format-check", "typecheck"]
description = "Run static checks"

[tool.pixi.tasks.demos]
cmd = """bash -c 'if [ -n "$1" ]; then vhs "demos/$1.tape"; else for tape in demos/*.tape; do [[ "$(basename "$tape")" == _* ]] && continue; vhs "$tape"; done; fi' -- {{ name }}"""
args = [{ arg = "name", default = "" }]
description = "Record demo GIFs"
