[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.12.2", "hatch-vcs>=0.2.0"]

[project]
authors = [{name = "Jannis Leidel", email = "jannis@leidel.info"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "platformdirs >=3.0",
  "pluggy >=1.5",
  "psutil >=5.9",
  "rich >=13.0",
]
description = "User-visible service supervision for long-running conda-adjacent processes"
dynamic = ["version"]
keywords = ["conda", "plugin", "process-supervision", "services"]
license = "BSD-3-Clause"
name = "conda-broker"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"

[project.urls]
Changelog = "https://github.com/jezdez/conda-broker/blob/main/CHANGELOG.md"
Documentation = "https://jezdez.github.io/conda-broker"
Homepage = "https://github.com/jezdez/conda-broker"
Issues = "https://github.com/jezdez/conda-broker/issues"
Repository = "https://github.com/jezdez/conda-broker"

[project.scripts]
cb = "conda_broker.__main__:main"

[project.entry-points.conda]
"conda-broker" = "conda_broker.plugin"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "conda_broker/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["conda_broker"]

[tool.ruff]
exclude = [".pixi", "conda_broker/_version.py"]
target-version = "py310"

[tool.ruff.lint]
flake8-type-checking = {exempt-modules = [], strict = true}
select = [
  "E",
  "F",
  "FA",
  "I",
  "ISC",
  "RUF100",
  "T10",
  "TCH",
  "UP",
  "W",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -v"

[tool.ty.environment]
python-version = "3.10"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64", "linux-aarch64"]

[tool.pixi.dependencies]
python = ">=3.10"
conda = ">=26.3"
platformdirs = ">=3.0"
pluggy = ">=1.5"
psutil = ">=5.9"
rich = ">=13.0"

[tool.pixi.pypi-dependencies]
conda-broker = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.9"
ty = ">=0.0.1a7"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.0"
pytest-cov = ">=4.0"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
sphinx = ">=7.0"
conda-sphinx-theme = ">=0.2"
myst-parser = ">=3.0"
sphinx-design = ">=0.6"
sphinx-copybutton = ">=0.5"
sphinx-sitemap = ">=2.5"
sphinx-argparse = ">=0.4"
sphinxcontrib-mermaid = ">=2.0"

[tool.pixi.environments]
dev = {features = ["dev"], solve-group = "default"}
test = {features = ["test"], solve-group = "default"}
test-py310 = {features = ["test", "py310"], solve-group = "test-py310"}
test-py311 = {features = ["test", "py311"], solve-group = "test-py311"}
test-py312 = {features = ["test", "py312"], solve-group = "test-py312"}
test-py313 = {features = ["test", "py313"], solve-group = "test-py313"}
test-py314 = {features = ["test", "py314"], solve-group = "test-py314"}
docs = {features = ["docs"], solve-group = "default"}

[tool.pixi.tasks]
lint = { cmd = "ruff check conda_broker tests demos/check.py demos/record.py", description = "Check code style" }
format = { cmd = "ruff format conda_broker tests demos/check.py demos/record.py", description = "Auto-format code" }
format-check = { cmd = "ruff format --check conda_broker tests demos/check.py demos/record.py", description = "Verify formatting" }
typecheck = { cmd = "ty check conda_broker", description = "Run type checker" }
test = { cmd = "pytest", description = "Run tests" }
test-cov = { cmd = "pytest --cov=conda_broker --cov-report=term-missing", description = "Run tests with coverage" }
demo-check = { cmd = "python demos/check.py", description = "Validate demo sources and assets" }

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -W --keep-going -b dirhtml docs docs/_build/dirhtml", description = "Build documentation" }

[tool.pixi.tasks.check]
depends-on = ["lint", "format-check", "typecheck"]
description = "Run static checks"

[tool.pixi.tasks.demos]
cmd = "python demos/record.py {{ name }}"
args = [{ arg = "name", default = "" }]
description = "Record demo GIFs"
